# SlicerVudo

./: CMakeLists.txt  README.md
Experiments/Mandelbrot/: Mandelbrot.comp.glsl  Mandelbrot.cpp  Mandelbrot.cpp.py  Mandelbrot.spv
Experiments/c++17/: c++17.cpp.py
Experiments/performance/: performance.comp.glsl  performance.cpp  performance.cpp.py  performance.spv
Vudo/: CMakeLists.txt  Vudo.py
Vudo/VudoLib/: Vudo.py
